# qi

./: Cargo.toml  LICENSE  README.md  dashboard.json  env.toml  prometheus.yaml  qi.service  qi.sh
.github/workflows/: ci.yaml  clippy.yaml
src/: error.rs  main.rs  utils.rs
src/collector/: error.rs  mod.rs
src/sensor/: error.rs  mod.rs
src/utils/: mod.rs
