[package]
name = "qi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sds011 = "0.2.1"
prometheus = { version = "0.12.0", features = ["push"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
