[package]
name = "qi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sds011 = "0.2.1"
prometheus_exporter = "0.8"
prometheus = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4.0"
env_logger = "0.8.4"
